// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack should work as a stack 1`] = `
Stack {
  "pHead": LNode {
    "data": null,
    "next": null,
  },
}
`;

exports[`Stack should work as a stack 2`] = `
Stack {
  "pHead": LNode {
    "data": null,
    "next": LNode {
      "data": 50,
      "next": null,
    },
  },
}
`;

exports[`Stack should work as a stack 3`] = `
Stack {
  "pHead": LNode {
    "data": null,
    "next": LNode {
      "data": 50,
      "next": null,
    },
  },
}
`;
